* Fix empty-like RedCloth definitions (closes "#142":https://github.com/textile/php-textile/issues/142).
* Fix empty-like table summaries (closes "#143":https://github.com/textile/php-textile/issues/143).
* Fix image dimension generation on Windows when doc_root can not be resolved (closes "#140":https://github.com/textile/php-textile/issues/140).
* Add more versatile parsing method, @Parser::parse()@.
* Add @Parser::setRestricted()@ and @Parser::isRestrictedModeEnabled()@.
* Add @Parser::setLite()@ and @Parser::isLiteModeEnabled()@.
* Add @Parser::setDocumentType()@ and @Parser::getDocumentType()@.
* Add @Parser::setDocumentRootDirectory()@ and @Parser::getDocumentRootDirectory()@.
* Add @Parser::setImages()@ and @Parser::isImageTagEnabled()@.
* Add @Parser::setBlockTags()@ and @Parser::isBlockTagEnabled()@ (closes "#138":https://github.com/textile/php-textile/issues/138).
* Add @Parser::setLinkRelationShip()@ and @Parser::getLinkRelationShip()@.
* Add @Parser::setLineWrap()@ and @Parser::isLineWrapEnabled()@ (closes "#139":https://github.com/textile/php-textile/issues/139).
* Deprecate @Parser::textileThis()@, @Parser::textileRestricted()@ and @Parser::textileCommon()@ in favour of the more versatile @Parser::parse()@.

h2. "Version 3.5.5 - 2014/01/02":https://github.com/textile/php-textile/releases/tag/v3.5.5

* Fix rendering of left and right image alignment in non-lite restricted mode (closes "#132":https://github.com/textile/php-textile/issues/132).
* Fix wrong triggered error type when using the deprecated @$encode@ option of @Parser::textileThis()@.
* Fix attribute regular expression to stop it matching multiple times (closes "#131":https://github.com/textile/php-textile/issues/131).
* Fix rendering of lists in table cells with span attributes set (closes "#135":https://github.com/textile/php-textile/issues/135).